<resources>
    <string name="app_name">chat</string>
    <string name="hint_email">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="text_sign_up"><u>No Account?. Go to SignUp</u></string>
    <string name="text_log_in">Have an Account?. Go to Login</string>
    <string name="sign_up_hint_name">Name</string>
    <string name="sign_up_hint_phone_number">Phone Number</string>
    <string name="signup_button_text">SignUp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>