<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/title"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input_layout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/sign_up_hint_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_text_input_layout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_text_input_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/sign_up_hint_phone_number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_sign_up_text_input_layout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_text_input_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_sign_up_text_input_layout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_sign_up_text_input_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:text="@string/signup_button_text"
                android:layout_below="@+id/password_sign_up_text_input_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:onClick="onSignUp"
                style="@style/standardButton"
                />
            <TextView
                android:id="@+id/log_in_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_up_button"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/text_log_in"
                android:onClick="onLogIn"
                style="@style/TextLink"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:background="@color/transparent_grey"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ProgressBar>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>