<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_width"
                android:layout_centerHorizontal="true"
                android:src="@drawable/default_user"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginBottom="@dimen/grid_2"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_profile_text_input_layout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/grid_2"
                android:layout_below="@id/profile_image"
                android:layout_centerHorizontal="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_hint_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_profile_text_input_layout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/grid_2"
                android:layout_below="@id/name_profile_text_input_layout"
                android:layout_centerHorizontal="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_profile_text_input_layout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/grid_2"
                android:layout_below="@id/email_profile_text_input_layout"
                android:layout_centerHorizontal="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_hint_phone_number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/profile_apply_button"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/phone_profile_text_input_layout"
                android:text="Apply"
                android:onClick="onApply"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/grid_3"
                style="@style/standardButton"/>

            <Button
                android:id="@+id/profile_delete_account_button"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/profile_apply_button"
                android:text="Delete Account"
                android:onClick="onDelete"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/grid_3"
                style="@style/standardButton"/>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_grey"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ProgressBar>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>